--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,98 @@
+:root {
+    /* font color */
+    --color1: rgb(211, 198, 53);
+    /* container color */
+    --color2: rgb(102, 119, 231);
+    /* display / number buttons */
+    --color3: rgb(47, 17, 128);
+    /* c, = and back */
+    --color4: rgb(22, 73, 124);
+    /* border operator */
+    --color5: rgb(87, 78, 215);
+}
+
+h1 {
+    color: var(--color2);
+}
+
+.themes button {
+    color: var(--color2);
+}
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    color: var(--color1);
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    background-color: azure;
+}
+
+.themes button {
+    width: 100px;
+    height: 30px;
+    border-radius: 8px;
+}
+
+.themes {
+    padding: 20px;
+}
+
+.header {
+    font-size: 24px;
+    padding: 20px;
+    text-align: center;
+}
+
+.footer {
+    color: var(--color2);
+    font-size: 22px;
+    font-weight: 700;
 }
 
 .calculator {
-    background-color: rgb(255, 255, 255);
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10px;
+    flex: 1;
 }
 
 .container {
-    background-color: rgb(0, 0, 0);
+    background-color: var(--color2);
     display: flex;
     flex-direction: column;
     max-width: 414px;
     max-height: 900px;
-    border: 8px solid black;
-    border-radius: 8px;
+    border: 8px solid var(--color2);
+    border-radius: 24px;
 }
 
 .display {
-    background-color: #c2d7e9;
+    background-color: var(--color3);
     padding: 15px;
     display: flex;
     align-items: flex-end;
     flex-direction: column;
-    font-size: 72px;
     height: 70px;
     margin-bottom: 10px;
     font-weight: 700;
+    border-radius: 16px;
+}
+
+.main-display {
+    font-size: 60px;
+    font-weight: 700;
+}
+
+.sub-display {
+    font-size: 18px;
 }
 
 .button-container {
@@ -42,17 +104,51 @@
 .button-container button {
     width: 100px;
     height: 100px;
-    border-radius: 10px;
+    border-radius: 16px;
     font-size: 32px;
     font-weight: 700;
     border: none;
     margin: 1px;
+    box-sizing: border-box;
 }
 
 #operator {
-    background-color: #eda0cd
+    background-color: var(--color5);
+}
+
+#operator:active {
+    background-color: rgb(var(--color5));
+}
+
+#sum {
+    background-color: var(--color4);
+}
+
+#sum:active {
+    background-color: rgb(var(--color4));
 }
 
 #number {
-    background-color: #c2d7e9
+    background-color: var(--color3);
+}
+
+#number:active {
+    background-color: rgb(var(--color3));
+}
+
+#c {
+    background-color: var(--color4);
+}
+
+#c:active {
+    background-color: rgb(var(--color4));
+}
+
+#back {
+    background-color: var(--color4);
+    width: 204px;
+}
+
+#back:active {
+    background-color: rgb(var(--color4));
 }
