--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,12 @@
 }
 
 h1 {
-    color: var(--color2);
+    color: var(--color1);
 }
 
 .default-theme {
-    color: black;
-    background-color: rgb(120, 114, 127);
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
 }
 
 .purple-theme {
@@ -59,13 +59,21 @@ body {
 }
 
 .themes {
-    padding: 20px;
+    padding: 10px;
 }
 
 .header {
+    display: flex;
     font-size: 24px;
     padding: 20px;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-box {
+    background-color: var(--color3);
+    border-radius: 8px;
 }
 
 .footer {
